--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
     <!--Main content-->
     <main>
         <!--Hero-->
-        <!-- <section class="hero">
+        <section class="hero">
             <div class="container">
                 <h1 class="main-head">Effective Solutions for Your Business</h1>
                 <button class="modal-btn" type="button" data-modal-open>Order Service</button>
             </div>
-        </section> -->
+        </section>
         <!--About company-->
         <section class="section-about">
             <div class="container">
                 <h2 class="section-title visually-hidden" hidden>About company</h2>
-                <ul class="list-about list w-1/2">
+                <ul class="list-about list">
                     <li class="list-about-item text-align-center-sm text-align-left-md w-sm">
                         <div class="about-icons sm-hide">
                             <svg width="64" height="64">
@@ -157,7 +157,7 @@
             </div>
         </section>
         <!--What are we doing-->
-        <!-- <section class="section-preview preview-container">
+        <section class="section-preview preview-container">
             <div class="container">
                 <h2 class="section-title">What are we doing</h2>
                 <ul class="list-preview list">
@@ -169,9 +169,9 @@
                             width="360" height="300"></li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!--Our Team-->
-        <!-- <section class="team-section">
+        <section class="team-section">
             <div class="container">
                 <h2 class="section-title">Our Team</h2>
                 <ul class="list-team list">
@@ -325,9 +325,9 @@
                     </li>
                 </ul>
             </div>
-        </section> --> 
+        </section> 
         <!-- Customers -->
-        <!-- <section class="section-customers">
+        <section class="section-customers">
             <div class="container">
                 <h2 class="section-title">Customers</h2>
                 <ul class="customers-list list">
@@ -379,7 +379,7 @@
         </section>
     </main>
     <!--Footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container container-soc-media-fotter">
             <div class="text-footer-div">
                 <a class="link logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
@@ -431,7 +431,7 @@
             </div>
         </div>
         </form>
-    </footer> -->
+    </footer>
 
     <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
