--- a/index.html
+++ b/index.html
@@ -381,43 +381,45 @@
     <!--Footer-->
     <footer class="footer">
         <div class="container container-soc-media-fotter">
-            <div class="text-footer-div">
-                <a class="link logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-                <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing
-                    & growth solutions.</p>
-            </div>
-            <div class="soc-media-div">
-                <p class="soc-subtitle">Social media</p>
-                <ul class="soc-madia-list list">
-                    <li class="soc-media-item">
-                        <a class="soc-media-link link" href target="_blank" rel="noopener noreferrer nofollow">
-                            <svg class="soc-media-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="soc-media-item">
-                        <a class="soc-media-link link" href target="_blank" rel="noopener noreferrer nofollow">
-                            <svg class="soc-media-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="soc-media-item">
-                        <a class="soc-media-link link" href target="_blank" rel="noopener noreferrer nofollow">
-                            <svg class="soc-media-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="soc-media-item">
-                        <a class="soc-media-link link" href target="_blank" rel="noopener noreferrer nofollow">
-                            <svg class="soc-media-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+            <div class="logo-soc-footer">
+                <div class="text-footer-div">
+                    <a class="link logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+                    <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing
+                        & growth solutions.</p>
+                </div>
+                <div class="soc-media-div">
+                    <p class="soc-subtitle">Social media</p>
+                    <ul class="soc-madia-list list">
+                        <li class="soc-media-item">
+                            <a class="soc-media-link link" href target="_blank" rel="noopener noreferrer nofollow">
+                                <svg class="soc-media-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-media-item">
+                            <a class="soc-media-link link" href target="_blank" rel="noopener noreferrer nofollow">
+                                <svg class="soc-media-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-media-item">
+                            <a class="soc-media-link link" href target="_blank" rel="noopener noreferrer nofollow">
+                                <svg class="soc-media-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-media-item">
+                            <a class="soc-media-link link" href target="_blank" rel="noopener noreferrer nofollow">
+                                <svg class="soc-media-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="footer-form-div">
                 <p class="footer-form-title">Subscribe</p>
