--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         </form>
     </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal-close-btn" type="button" data-modal-close>
                 <svg class="icon-modal-close" width="8" height="8">
@@ -488,10 +488,10 @@
                 <button class="modal-send-btn" type="submit">Send</button>
             </form>
         </div>
-    </div> -->
+    </div>
 
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
