--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
             <div class="container">
                 <h2 class="section-title">What are we doing</h2>
                 <ul class="list-preview list">
-                    <li class="preview-item"><img class="preview-img" src="./images/img1.jpg" alt="computer" width="360"
+                    <li class="preview-item"><img class="preview-img" srcset="./images/img1-2x.jpeg 2x" src="./images/img1.jpg" alt="computer" width="360"
                             height="300"></li>
-                    <li class="preview-item"><img class="preview-img" src="./images/img2.jpg" alt="phone screen"
+                    <li class="preview-item"><img class="preview-img" srcset="./images/img2-2x.jpeg 2x" src="./images/img2.jpg" alt="phone screen"
                             width="360" height="300"></li>
-                    <li class="preview-item"><img class="preview-img" src="./images/img3.jpg" alt="computer and phone"
+                    <li class="preview-item"><img class="preview-img" srcset="./images/img3-2x.jpeg 2x" src="./images/img3.jpg" alt="computer and phone"
                             width="360" height="300"></li>
                 </ul>
             </div>
@@ -175,7 +175,7 @@
             <div class="container">
                 <h2 class="section-title">Our Team</h2>
                 <ul class="list-team list">
-                    <li class="list-team-items w-sm-1 w-md-1/2"><img class="list-team-img" src="./images/markguerrero.jpg"
+                    <li class="list-team-items w-sm-1 w-md-1/2"><img class="list-team-img" srcset="./images/markguerrero2x.jpeg 2x" src="./images/markguerrero.jpg"
                             alt="Mark Guerrero" width="264">
                         <div class="sub-text-team">
                             <h3 class="subtitle-team">Mark Guerrero</h3>
@@ -212,7 +212,7 @@
                             </ul> 
                         </div>
                     </li>
-                    <li class="list-team-items w-sm-1 w-md-1/2"><img class="list-team-img" src="./images/tomford.jpg" alt="Tom Ford"
+                    <li class="list-team-items"><img class="list-team-img" srcset="./images/tomford2x.jpeg 2x" src="./images/tomford.jpg" alt="Tom Ford"
                             width="264">
                         <div class="sub-text-team">
                             <h3 class="subtitle-team">Tom Ford</h3>
@@ -249,7 +249,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="list-team-items"><img class="list-team-img" src="./images/camilagarcia.jpg"
+                    <li class="list-team-items"><img class="list-team-img" srcset="./images/camilagarcia2x.jpeg 2x" src="./images/camilagarcia.jpg"
                             alt="Camila Garcia" width="264">
                         <div class="sub-text-team">
                             <h3 class="subtitle-team">Camila Garcia</h3>
@@ -286,7 +286,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="list-team-items"><img class="list-team-img" src="./images/danielwilson.jpg"
+                    <li class="list-team-items"><img class="list-team-img" srcset="./images/danielwilson2x.jpeg 2x" src="./images/danielwilson.jpg"
                             alt="Daniel Wilson" width="264">
                         <div class="sub-text-team">
                             <h3 class="subtitle-team">Daniel Wilson</h3>
@@ -434,6 +434,8 @@
         </div>
         </form>
     </footer>
+
+    <!--Modal-->
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
