--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     </svg>
                 </button>
                 <ul class="mobile-menu-list list">
-                    <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./index.html">Studio</a></li>
+                    <li class="mobile-menu-item"><a class="mobile-menu-link-activ link" href="./index.html">Studio</a></li>
                     <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a></li>
-                    <li class="mobile-menu-item"><a class="mobile-menu-link-activ link" href="">Contacts</a></li>
+                    <li class="mobile-menu-item"><a class="mobile-menu-link link" href="">Contacts</a></li>
                 </ul>
                 <div>
                     <ul class="mobile-contact-list list">
